discussion/kv_engine/135923/135923_rev3_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39505: Add support for CBStat-only stats

Certain stats are either not relevant to Prometheus, or duplicate other
stats.

Add a CBSTAT macro for use in stats.def.h to declare that a stat should
only be exposed through cbstats.

Change-Id: I8b09b42158df4765c3b0ad734820c91a3c8c842f

======================================================================================================================
COMMENTS
======================================================================================================================
Author: James H
Date: 2020-09-30 14:06:08.000000000
Message: 
Uploaded patch set 3.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-09-30 14:34:50.000000000
Message: 
Patch Set 3: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4792/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/statistics/definitions.cc:54:7: error: an initializer for a delegating constructor must appear alone [clang-diagnostic-error]
    : StatDef(uniqueKey), cbStatsOnly(true) {
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4792/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/statistics/definitions.cc:54:7:
error: an initializer for a delegating constructor must appear alone [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/4792/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/26589/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/statistics/definitions.cc:54:7:
error: an initializer for a delegating constructor must appear alone
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/26589/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/30753/ : FAILURE

Compile error at ..\kv_engine\statistics\definitions.cc(54): error C3511: "cb::stats::StatDef": a call to a delegating constructor shall be the only member-initializer ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/30753/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/5159/ : FAILURE

Compile error at [2020-09-30T14:10:17.879Z] ../kv_engine/statistics/definitions.cc:54:7:
error: an initializer for a delegating constructor must appear alone
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/5159/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/6084/ : FAILURE

Compile error at [2020-09-30T14:09:51.876Z] ../kv_engine/statistics/definitions.cc:54:43:
error: mem-initializer for ?cb::stats::StatDef::cbStatsOnly? follows constructor delegation
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/6084/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/6203/ : FAILURE

Compile error at [2020-09-30T14:13:04.660Z] ../kv_engine/statistics/definitions.cc:54:43:
error: mem-initializer for ?cb::stats::StatDef::cbStatsOnly? follows constructor delegation
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/6203/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/6309/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/13975/ : FAILURE

Compile error at [2020-09-30T14:11:32.928Z] ../kv_engine/statistics/definitions.cc:54:43:
error: mem-initializer for ?cb::stats::StatDef::cbStatsOnly? follows constructor delegation
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/13975/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/3319/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
